add - primi due button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,22 @@
     </header>
 
     <main>
+        <div class="main__container">
+            <div class="main__button">
+                <button>Add Task</button>
+                <button>Add Section</button>
+            </div>
+    
+            <div>
+                <ul>
+                    <li>New Task</li>
+                    <li>Today</li>
+                    <li>App coming</li>
+                </ul>
+            </div>
+
+        </div>
+       
 
     </main>
 
