add - check e ul

--- a/index.html
+++ b/index.html
@@ -19,15 +19,21 @@
     <main>
         <div class="main__container">
             <div class="main__button">
-                <button>Add Task</button>
-                <button>Add Section</button>
+                <button class="main__button-add">Add Task</button>
+                <button class="main__button-add">Add Section</button>
             </div>
     
             <div>
                 <ul>
-                    <li>New Task</li>
-                    <li>Today</li>
-                    <li>App coming</li>
+                    <li>&#x25BC; New Task
+                        <ul>
+                            <li><span>&check;</span>Quarterly Newsletter Editorial</li>
+                        </ul>
+                    </li>
+
+                    <li>&#x25BC; Today</li>
+
+                    <li>&#x25BC; App coming</li>
                 </ul>
             </div>
 
